src/assets/styles/components/_nav.scss
.nav {
  height: rem(38);
  margin-left: auto;
  margin-top: 0;
}

.nav .menu-toggle {
  background: var(--header-bg, transparent);
  border-radius: rem(3);
  color: var(--blue-900);
  height: 3rem(4);
  line-height: 0.7;
  margin-right: rem(2);
  padding: rem(6) rem(12);
  position: relative;
  z-index: 20;

  &:hover {
    background: rgba(255, 255, 255, 0.5);
  }

  &:focus {
    background: var(--header-bg, transparent);
    box-shadow: 0 0 0 rem(2) var(--parent-bg), 0 0 0 rem(4) var(--blue-900), 0 0 0 rem(2) var(--blue-900) inset;
  }

  &:active {
    background-color: var(--indigo-800);
    color: var(--white);
  }

  &[aria-expanded="true"] {
    color: var(--header-fg);

    &:hover {
      background: rgba(255, 255, 255, 0.3);
      color: var(--header-fg);
    }

    &:focus {
      box-shadow: 0 0 0 rem(2) var(--parent-bg), 0 0 0 rem(4) var(--header-fg), 0 0 0 rem(2) var(--header-fg) inset;
      color: var(--white);
    }

    &:active {
      background: var(--indigo-200);
      color: var(--indigo-800);
    }
  }

  svg {
    display: inline-block;
    margin-right: rem(4);
  }
}

.nav .menu {
  background: var(--indigo-800);
  box-shadow: 0 rem(20) rem(25) rem(-5) rgba(0, 0, 0, 0.1), 0 rem(10) rem(10) rem(-5) rgba(0, 0, 0, 0.04);
  color: var(--white);
  display: none;
  left: calc(-1 / 2 * var(--gutter));
  padding: rem(88) 0 rem(40);
  position: absolute;
  width: 100vw;
  z-index: 10;
}

.nav [aria-expanded="true"] + * {
  display: block;
}

.menu .menu-label {
  padding: 0 var(--gutter);
}

.menu ul {
  display: flex;
  flex-direction: column;
  list-style: none;
  padding: 0;
}

.menu li {
  padding: 0;

  &.submenu-parent--submenu-visible {
    border-bottom: rem(1) solid black;

    button[data-parent="true"] {
      text-decoration: none;
    }
  }
}

.menu li ul {
  display: none;
  margin-top: 0;
}

.menu a,
.menu button {
  align-items: center;
  color: var(--white);
  display: flex;
  font-family: var(--ff-display);
  font-weight: var(--fw-semibold);
  height: rem(50);
  padding: 0 var(--gutter);
  text-align: left;
  text-decoration: none;
  width: 100%;

  &:hover,
  &:focus {
    background: var(--indigo-100);
    color: var(--indigo-800);
  }

  &:active {
    background: var(--indigo-900);
    color: var(--white);
  }
}

.menu [aria-current="page"],
.menu [data-parent="true"] {
  text-decoration: underline;
  text-decoration-color: var(--yellow-200);
  text-decoration-thickness: rem(2);

  &:hover,
  &:focus {
    text-decoration-color: var(--indigo-800);
  }
}

.menu button svg {
  display: inline-block;
  margin-left: rem(8);
}

.menu li ul a {
  background: var(--indigo-900);
  font-weight: var(--fw-normal);
}

.menu li ul a[rel~="external"]::after,
.menu li ul a[href^="mailto:"]::after {
  background: currentColor;
  content: "";
  display: inline-block;
  height: 1.5em;
  margin-bottom: 0.125em;
  margin-left: 0.125em;
  mask-image: url('../images/external.svg');
  mask-position: center;
  mask-repeat: no-repeat;
  mask-size: 1.5em;
  width: 1.5em;
}

.page--404 {
  .nav .menu-toggle {
    color: var(--header-fg);

    &:hover {
      background: rgba(255, 255, 255, 0.3);
      color: var(--header-fg);
    }

    &:focus {
      box-shadow: 0 0 0 rem(2) var(--parent-bg), 0 0 0 rem(4) var(--header-fg), 0 0 0 rem(2) var(--header-fg) inset;
      color: var(--white);
    }

    &:active {
      background: var(--indigo-200);
      color: var(--indigo-800);
    }
  }
}

.page--home {
  .nav .menu-toggle {
    &:hover {
      background: var(--indigo-200);
    }

    &:active {
      background: var(--indigo-800);
    }

    &[aria-expanded="true"] {
      &:hover {
        background: rgba(255, 255, 255, 0.3);
      }

      &:active {
        background: var(--white);
      }
    }
  }
}

.no-js {
  .nav {
    height: auto;
    width: 100%;
  }

  .nav .menu-toggle {
    display: none;
  }

  .nav .menu {
    background: var(--header-bg);
    box-shadow: none;
    color: var(--header-fg);
    display: block;
    margin-left: rem(-24);
    margin-right: rem(-24);
    padding-top: rem(32);
    position: relative;
    width: calc(#{rem(48)} + 100%);
  }

  .nav .menu-label {
    @include visually-hidden();
  }

  .nav li ul {
    display: block;
  }

  .menu a,
  .menu button {
    color: var(--black);

    &:hover,
    &:focus {
      background: var(--black);
      color: var(--white);
    }

    &:active {
      background: transparentize(black, 0.3);
      color: var(--white);
    }
  }

  .menu a::after {
    background: currentColor;
    content: "";
    display: inline-block;
    height: 1.5em;
    margin-left: 0.125em;
    mask-position: center;
    mask-repeat: no-repeat;
    mask-size: 1.5em;
  }

  .menu a:not([rel="external"])::after {
    margin-bottom: 0;
    mask-image: url('../images/internal.svg');
    width: 1em;
  }

  .menu a[rel~="external"]::after,
  .menu a[href^="mailto:"]::after {
    margin-bottom: 0.125em;
    mask-image: url('../images/external.svg');
    width: 1.5em;
  }

  .menu [data-parent="true"] {
    text-decoration: none;
  }

  .menu [aria-current="page"],
  .menu li ul [data-parent="true"] {
    text-decoration: underline;
    text-decoration-color: var(--indigo-500);
    text-decoration-thickness: rem(2);

    &:hover,
    &:focus {
      text-decoration-color: var(--white);
    }
  }

  .menu li ul a {
    background: var(--header-bg);
    color: var(--black);
  }

  .menu a[href="#"] {
    display: none;
  }

  .menu a[href="#"] + ul a {
    font-weight: var(--fw-semibold);
  }

  .page--404 {
    .menu a,
    .menu button {
      color: var(--white);

      &:hover,
      &:focus {
        background: var(--indigo-100);
        color: var(--indigo-800);
      }

      &:active {
        background: var(--indigo-900);
        color: var(--white);
      }
    }

    .menu li ul a {
      background: var(--header-bg);
      color: var(--white);
    }
  }

  .page--home {
    .menu a,
    .menu button {
      &:hover,
      &:focus {
        background: var(--blue-500);
        color: var(--black);
      }

      &:active {
        background: transparentize($blue-500, 0.5);
        color: var(--black);
      }
    }

    .menu li ul a {
      background: var(--header-bg);
      color: var(--black);
    }
  }
}

@include breakpoint-up(md) {
  .nav {
    height: rem(80);
  }

  .nav .menu-toggle {
    display: none;
  }

  .nav .menu {
    background: transparent;
    box-shadow: none;
    display: block;
    height: rem(80);
    margin-top: 0;
    padding-bottom: 0;
    padding-top: 0;
    position: relative;
    width: auto;
    z-index: auto;
  }

  .menu .menu-label {
    @include visually-hidden();
  }

  .menu ul {
    flex-direction: row;
    margin-top: 0;
    padding: 0;
    position: relative;
  }

  .menu li {
    padding: 0;
    position: relative;
  }

  .menu li ul {
    background: var(--white);
    box-shadow: 0 0 rem(10) rgba(0, 0, 0, 0.25);
    left: 0;
    margin-top: 0;
    position: absolute;
    width: rem(256);
    z-index: 20;
  }

  .menu a,
  .menu button {
    align-items: center;
    color: var(--blue-900);
    display: flex;
    font-weight: var(--fw-medium);
    height: rem(80);
    padding: 0 rem(20);

    &:hover,
    &:focus {
      background: var(--black);
      color: var(--white);
    }

    &:active {
      background: transparentize(black, 0.3);
      color: var(--white);
    }
  }

  .menu [aria-expanded="true"] {
    background: var(--black);
    color: var(--white);
  }

  .menu [aria-current="page"],
  .menu [data-parent="true"] {
    text-decoration: underline;
    text-decoration-color: var(--black);
    text-decoration-thickness: rem(2);
    text-underline-offset: rem(5);

    &:hover,
    &:focus {
      text-decoration-color: var(--white);
    }
  }

  .menu li ul a {
    background: var(--white);
    color: var(--black);
    font-weight: var(--fw-normal);
    height: unset;
    min-height: rem(50);
    padding: 0 rem(20);

    &:hover,
    &:focus {
      background: var(--yellow-500);
      color: var(--black);
    }

    &:active {
      background: transparentize($yellow-500, 0.5);
    }

    &[aria-current="page"] {
      &:hover,
      &:focus {
        text-decoration-color: var(--black);
      }
    }
  }

  .page--404 {
    .menu a,
    .menu button {
      color: var(--white);

      &:hover,
      &:focus {
        background: var(--black);
      }

      &:active {
        background: transparentize(black, 0.3);
      }
    }

    .menu li ul a {
      background: var(--white);
      color: var(--black);

      &:hover,
      &:focus {
        background: var(--yellow-500);
        color: var(--black);
      }

      &:active {
        background: transparentize($yellow-500, 0.5);
      }
    }
  }

  .page--home {
    .menu a,
    .menu button {
      &:hover,
      &:focus {
        background: var(--blue-500);
        color: var(--black);
      }

      &:active {
        background: transparentize($blue-500, 0.5);
        color: var(--black);
      }
    }

    .menu [aria-expanded="true"] {
      background: var(--blue-500);
      color: var(--black);
    }

    .menu li ul a {
      &:hover,
      &:focus {
        background: var(--yellow-500);
        color: var(--black);
      }

      &:active {
        background: transparentize($yellow-500, 0.5);
      }
    }
  }

  .no-js {
    .nav {
      height: rem(192);
      margin-top: rem(26);
      width: 100%;
    }

    .nav .menu {
      height: rem(192);
      margin-left: 0;
    }

    .menu ul {
      columns: 4;
      display: block;
      height: rem(160);
      width: auto;
    }

    .menu li {
      padding-top: rem(12);

      &.submenu-parent {
        break-inside: avoid;
      }
    }

    .menu li ul {
      background: transparent;
      box-shadow: none;
      break-inside: avoid;
      columns: 1;
      height: auto;
      position: relative;
      width: 100%;
    }

    .menu a {
      display: inline;
      font-size: var(--step-2);
      height: auto;
      padding: 0;
      text-decoration: none;
      width: auto;

      &:hover,
      &:focus {
        background: var(--yellow-500);
        color: var(--black);
      }
    }

    .menu a:not([rel="external"])::after {
      margin-bottom: -0.4375em;
    }

    .menu a[rel~="external"]::after,
    .menu a[href^="mailto:"]::after {
      margin-bottom: -0.375em;
    }

    .menu [aria-current="page"] {
      text-decoration: underline;
      text-decoration-color: var(--indigo-500);
      text-decoration-thickness: rem(3);

      &:hover,
      &:focus {
        text-decoration-color: var(--black);
      }
    }

    .menu li ul li {
      break-inside: avoid;
      padding-top: 0;
    }

    .menu li ul a {
      background: transparent;
      font-size: var(--step-0);
      min-height: auto;
      padding: 0;
    }

    .menu a[href="#"] + ul a {
      font-size: var(--step-2);
      font-weight: var(--fw-medium);
    }

    .menu a[href="#"] + ul li + li {
      padding-top: rem(12);
    }

    .menu a:not([href="#"]) + ul li {
      margin-top: rem(8);
    }

    .menu a:not([href="#"]) + ul li + li {
      margin-top: rem(8);
    }

    .page--home {
      .menu a {
        &:hover,
        &:focus {
          background: var(--yellow-500);
          color: var(--black);
        }

        &:active {
          background: var(--yellow-500);
        }
      }
    }
  }
}

@import 'nav--secondary';

